Fix toolchain issues in docker builds